--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,7 @@
     <title>Hello</title>
 </head>
 <body>
-    <h1>Welcome to My Website</h1>
+    <h1 style="color:blue;">Welcome to My Website</h1>
     Hello, World!
     <h2>This is the test commit</h2>
 </body>
